cabal-version:      3.0
name:               HelloTriangle-hs
version:            0.1.0.0
synopsis:           Tutorial Project using 'vulkan' haskell bindings
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Lqnk4
maintainer:         internalbeast109@gmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -fno-warn-name-shadowing

executable HelloTriangle-hs
    import:           warnings
    main-is:          Main.hs
    other-modules: Init,
                   Window,
                   Swapchain,
                   RefCounted,
                   Pipeline,
                   Frame,
                   Render,
                   MonadVulkan,
    -- other-extensions:
    build-depends:    bytestring,
                      base ^>=4.18.3.0,
                      transformers,
                      mtl,
                      vulkan,
                      vulkan-utils,
                      VulkanMemoryAllocator,
                      vector,
                      resourcet ^>=1.3.0,
                      GLFW-b ^>=3.3.9.1,
                      text,
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: OverloadedStrings, 
                        DataKinds,
                        OverloadedStrings, 
                        DisambiguateRecordFields,
                        LambdaCase,
                        RankNTypes,
                        DerivingStrategies,
                        GeneralizedNewtypeDeriving,
                        RecordWildCards,
                        BangPatterns,
                        TupleSections,
                        OverloadedLists,
                        QuasiQuotes
